--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
-asgiref==3.8.1
-colorama==0.4.6
-Django==5.2
+astroid==3.3.11
+black==25.1.0
+click==8.2.1
+dill==0.4.0
+flake8==7.3.0
 iniconfig==2.1.0
-packaging==24.2
-pluggy==1.5.0
-pytest==8.3.5
-pytest-django==4.11.1
-sqlparse==0.5.3
-tzdata==2025.2
+isort==6.0.1
+mccabe==0.7.0
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
+pycodestyle==2.14.0
+pyflakes==3.4.0
+Pygments==2.19.2
+pylint==3.3.7
+pytest==8.4.1
+tomlkit==0.13.3
