--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: Python CI Pipeline
 
 on:
   push:
@@ -7,9 +7,26 @@ on:
     branches: [main]
 
 jobs:
-  lint-and-test:
+  black-format:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install black
+        run: pip install black
+
+      - name: Check code formatting
+        run: black --check .
+
+  run-tests:
+    needs: black-format # ✅ This job runs only if black-format passes
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -21,26 +38,16 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install flake8 black pylint pytest
+          pip install pytest
 
-      - name: Run flake8
-        run: |
-          echo "Running flake8..."
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+      - name: Run tests
+        run: pytest
 
-      - name: Run black (check only)
-        run: |
-          echo "Running black..."
-          black . --check
-
-      - name: Run pylint
-        run: |
-          echo "Running pylint..."
-          pylint $(find . -name "*.py" ! -path "./venv/*")
-
-      - name: Run tests with pytest
-        run: |
-          echo "Running pytest..."
-          pytest
+  deploy:
+    needs: run-tests # ✅ This job runs only if tests pass
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' # Deploy only from main branch
+    steps:
+      - name: Deploy
+        run: echo "Deploying the app..."
