--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -38,8 +38,15 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest
+          pip install pytest pytest-django
+
+      - name: Set Django settings module
+        run: echo "DJANGO_SETTINGS_MODULE=config.settings" >> $GITHUB_ENV
+
+      - name: Run Django migrations
+        run: python manage.py migrate
 
       - name: Run tests
         run: pytest
