--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
+asgiref==3.9.1
 astroid==3.3.11
 black==25.1.0
+cfgv==3.4.0
 click==8.2.1
 dill==0.4.0
+distlib==0.4.0
+Django==5.2.4
+filelock==3.18.0
 flake8==7.3.0
+identify==2.6.12
 iniconfig==2.1.0
 isort==6.0.1
 mccabe==0.7.0
 mypy_extensions==1.1.0
+nodeenv==1.9.1
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
+pre_commit==4.2.0
 pycodestyle==2.14.0
 pyflakes==3.4.0
 Pygments==2.19.2
 pylint==3.3.7
 pytest==8.4.1
+pytest-django==4.11.1
+PyYAML==6.0.2
+sqlparse==0.5.3
 tomlkit==0.13.3
-Django>=4.0,<5.0
+virtualenv==20.32.0
